--- a/util/svt.ini
+++ b/util/svt.ini
@@ -1,4 +1,1 @@
-CR_CURRENT_BE_VERSION=0.8.6&
-CR_CURRENT_DB_VERSION=0.8.6&
-CR_REQUIRES_PREVIOUS_BE_VERSION=0.8.5&
-CR_REQUIRES_PREVIOUS_DB_VERSION=0.8.5
+CR_CURRENT_BE_VERSION=0.8.6&CR_CURRENT_DB_VERSION=0.8.6&CR_REQUIRES_PREVIOUS_BE_VERSION=0.8.5&CR_REQUIRES_PREVIOUS_DB_VERSION=0.8.5
